@@ -98,18 +98,18 @@
 #enddef
 
 #define TRAIT_RESILIENT
-    # Units with trait Resilient get 10% more HP plus 3.
+    # Units with trait Resilient get 4 more HP plus 1 per level.
     [trait]
         id=resilient
         male_name= _ "resilient"
         female_name= _ "female^resilient"
         [effect]
             apply_to=hitpoints
-            increase_total=10%
+            increase_total=4
         [/effect]
         [effect]
             apply_to=hitpoints
-            increase_total=3
+            increase_total_per_level=1
         [/effect]
     [/trait]
 #enddef
